crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_named_unicode_raw.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    FStringStart 0..3 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE),
    FStringMiddle 3..5 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE),
    Lbrace 5..6,
    Identifier 6..12,
    Rbrace 12..13,
    FStringMiddle 13..20 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE),
    FStringEnd 20..21 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE),
    Newline 21..21,
]
```
