crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__tstring_with_format_spec.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    TStringStart 0..2 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 2..3,
    Identifier 3..6,
    Colon 6..7,
    Rbrace 7..8,
    TStringMiddle 8..9 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 9..10,
    Identifier 10..11,
    Equal 11..12,
    Exclamation 12..13,
    Identifier 13..14,
    Colon 14..15,
    TStringMiddle 15..18 (flags = DOUBLE_QUOTES | T_STRING),
    Rbrace 18..19,
    TStringMiddle 19..20 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 20..21,
    Identifier 21..22,
    Colon 22..23,
    TStringMiddle 23..24 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 24..25,
    Identifier 25..26,
    Rbrace 26..27,
    TStringMiddle 27..28 (flags = DOUBLE_QUOTES | T_STRING),
    Rbrace 28..29,
    TStringMiddle 29..30 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 30..31,
    String 31..33,
    Colon 33..34,
    TStringMiddle 34..36 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 36..37,
    Int 37..38,
    Colon 38..39,
    Lbrace 39..40,
    Int 40..41,
    Rbrace 41..42,
    Rbrace 42..43,
    Rbrace 43..44,
    TStringMiddle 44..45 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 45..46,
    Identifier 46..47,
    Colon 47..48,
    Lbrace 48..49,
    Lbrace 49..50,
    Int 50..51,
    Rbrace 51..52,
    Dot 52..53,
    Identifier 53..56,
    Lpar 56..57,
    Rpar 57..58,
    Rbrace 58..59,
    Rbrace 59..60,
    TStringEnd 60..61 (flags = DOUBLE_QUOTES | T_STRING),
    Newline 61..61,
]
```
