crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__tstring_with_lambda_expression.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    TStringStart 0..2 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 2..3,
    Lambda 3..9,
    Identifier 10..11,
    Colon 11..12,
    Lbrace 12..13,
    Identifier 13..14,
    Rbrace 14..15,
    Rbrace 15..16,
    TStringEnd 16..17 (flags = DOUBLE_QUOTES | T_STRING),
    Newline 17..18,
    TStringStart 18..20 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 20..21,
    Lpar 21..22,
    Lambda 22..28,
    Identifier 29..30,
    Colon 30..31,
    Lbrace 31..32,
    Identifier 32..33,
    Rbrace 33..34,
    Rpar 34..35,
    Rbrace 35..36,
    TStringEnd 36..37 (flags = DOUBLE_QUOTES | T_STRING),
    Newline 37..37,
]
```
