crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__tstring_with_multiline_format_spec.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    TStringStart 0..4 (flags = TRIPLE_QUOTED_STRING | T_STRING),
    TStringMiddle 4..6 (flags = TRIPLE_QUOTED_STRING | T_STRING),
    Lbrace 6..7,
    NonLogicalNewline 7..8,
    Identifier 12..13,
    Colon 13..14,
    TStringMiddle 14..16 (flags = TRIPLE_QUOTED_STRING | T_STRING),
    Rbrace 16..17,
    TStringMiddle 17..19 (flags = TRIPLE_QUOTED_STRING | T_STRING),
    TStringEnd 19..22 (flags = TRIPLE_QUOTED_STRING | T_STRING),
    Newline 22..23,
    TStringStart 23..27 (flags = TRIPLE_QUOTED_STRING | T_STRING),
    TStringMiddle 27..29 (flags = TRIPLE_QUOTED_STRING | T_STRING),
    Lbrace 29..30,
    NonLogicalNewline 30..31,
    Identifier 35..36,
    Colon 36..37,
    TStringMiddle 37..61 (flags = TRIPLE_QUOTED_STRING | T_STRING),
    Rbrace 61..62,
    TStringMiddle 62..64 (flags = TRIPLE_QUOTED_STRING | T_STRING),
    TStringEnd 64..67 (flags = TRIPLE_QUOTED_STRING | T_STRING),
    Newline 67..68,
]
```
