crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__tstring_with_nul_char.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        TStringStart,
        0..2,
        TokenFlags(
            T_STRING,
        ),
    ),
    (
        TStringMiddle,
        2..4,
        TokenFlags(
            T_STRING,
        ),
    ),
    (
        TStringEnd,
        4..5,
        TokenFlags(
            T_STRING,
        ),
    ),
    (
        Newline,
        5..5,
    ),
]
```
