crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__unicode_identifier_continuation.snap
---
source: crates/ruff_python_parser/src/lexer.rs
assertion_line: 2434
expression: lex_source(source)
---
## Tokens
```
[
    (
        Name(
            Name("aC"),
        ),
        0..5,
    ),
    (
        Equal,
        6..7,
    ),
    (
        Int(
            500,
        ),
        8..11,
    ),
    (
        Newline,
        11..11,
    ),
]
```
